--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,10 @@
 <% layout('default') %>
 
-<h1><%= title %></h1>
-<button class="btn btn-primary">Button</button>
+<div class="container">
+  <h1><%= title %></h1>
+
+  <a href="/documents/new" class="btn btn-primary d-inline-flex">
+    <i class="material-icons">add_circle</i>
+    <span class="ms-2">Создать документ</span>
+  </a>
+</div>
