--- a/views/doc-view.ejs
+++ b/views/doc-view.ejs
@@ -1,5 +1,6 @@
 <% layout('default') %>
 
 <div class="container p-5">
-  <h1></h1>
+  <h1><%= document.title %></h1>
+  <p><%= document.text %></p>
 </div>
