--- a/views/default.ejs
+++ b/views/default.ejs
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/icons/iconfont/material-icons.css" />
+    <link rel="stylesheet" href="/main.css" />
     <title><%= title %></title>
   </head>
   <body>
     <%- body %>
+
+    <script src="/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
