--- a/views/doc-new.ejs
+++ b/views/doc-new.ejs
@@ -11,7 +11,7 @@
 
     <div class="mb-3">
       <label for="text" class="form-label">Текст</label>
-      <textarea name="text" cols="30" rows="10" class="form-control"></textarea>
+      <textarea id="tinymce" name="text" class="form-control"></textarea>
     </div>
 
     <div class="mb-3">
