--- a/views/doc-view.ejs
+++ b/views/doc-view.ejs
@@ -14,7 +14,7 @@
   </div>
 
   <div class="row mt-4">
-    <h1><%= document.title %></h1>
-    <p><%= document.text %></p>
+    <h1><%- document.title %></h1>
+    <p><%- document.text %></p>
   </div>
 </div>
