--- a/views/default.ejs
+++ b/views/default.ejs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/icons/iconfont/material-icons.css" />
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <script src="/tinymce/tinymce.min.js"></script>
+    <script src="/js/tinymce.config.js"></script>
     <title><%= title %></title>
   </head>
   <body>
