--- a/views/doc-edit.ejs
+++ b/views/doc-edit.ejs
@@ -17,7 +17,13 @@
 
     <div class="mb-3">
       <label for="text" class="form-label">Текст</label>
-      <textarea name="text" cols="30" rows="10" class="form-control">
+      <textarea
+        id="tinymce"
+        name="text"
+        cols="30"
+        rows="10"
+        class="form-control"
+      >
          <%= document.text %>
       </textarea>
     </div>
